--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,23 +1,34 @@
 ---
-import BaseHead from '../components/BaseHead.astro';
-import BlogHeader from '../components/BlogHeader.astro';
-import BlogPost from '../components/BlogPost.astro';
+import BaseHead from "../components/BaseHead.astro"
+import BlogHeader from "../components/BlogHeader.astro"
+import BlogPost from "../components/BlogPost.astro"
+import Header from "../components/Header.astro"
 
-const { content } = Astro.props;
-const { title, description, publishDate, author, authorURL, heroImage, permalink, alt } = content;
+const { content } = Astro.props
+const {
+  title,
+  description,
+  publishDate,
+  author,
+  authorURL,
+  heroImage,
+  permalink,
+  alt,
+} = content
 ---
 
-<html lang={content.lang || 'en'}>
-	<head>
-		<BaseHead {title} {description} {permalink} />
-	</head>
+<html lang={content.lang || "en"}>
+  <head>
+    <BaseHead {title} {description} {permalink} />
+  </head>
 
-	<body>
-		<BlogHeader />
-		<div class="wrapper">
-			<BlogPost {title} {author} {authorURL} {heroImage} {publishDate} {alt}>
-				<slot />
-			</BlogPost>
-		</div>
-	</body>
+  <body>
+    <Header />
+    <BlogHeader />
+    <div class="wrapper">
+      <BlogPost {title} {author} {authorURL} {heroImage} {publishDate} {alt}>
+        <slot />
+      </BlogPost>
+    </div>
+  </body>
 </html>
